--- a/index.html
+++ b/index.html
@@ -723,10 +723,17 @@
                             </ol>
                         </div>
 
-                        <div style="text-align: center; margin: 20px 0;">
-                            <img src="vuln1-s1.png" alt="Nmap Service Discovery" 
-                                 style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-                            <p style="margin-top: 10px; font-style: italic; color: #555;">Figure: Nmap scan showing UnrealIRCd on port 6667</p>
+                        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin: 20px 0;">
+                            <div style="flex: 1 1 280px; max-width: 45%; text-align: center;">
+                                <img src="vuln1-s1.png" alt="Nmap Service Discovery 1"
+                                     style="width: 100%; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+                                <p style="margin-top: 8px; font-style: italic; color: #555;">Figure A: Nmap scan showing UnrealIRCd on port 6667</p>
+                            </div>
+                            <div style="flex: 1 1 280px; max-width: 45%; text-align: center;">
+                                <img src="vuln1-s1b.png" alt="Nmap Service Discovery 2"
+                                     style="width: 100%; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+                                <p style="margin-top: 8px; font-style: italic; color: #555;">Figure B: Additional Nmap output confirming service version details</p>
+                            </div>
                         </div>
                         
                         
